style.css
@font-face {
font-family:
    'ClashDisplay-Regular';
src:
    url('./font/ClashDisplay-Regular.ttf') format('truetype');
font-weight: 400;
font-display: swap;
font-style: normal;
}

@font-face {
  font-family: 'ClashDisplay-Semibold';
  src:
    url('./font/ClashDisplay-Semibold.ttf') format('truetype');
  font-weight: 600;
  font-display: swap;
  font-style: normal;
}

@font-face {
font-family:
    'ClashDisplay-Bold';
src:
    url('./font/ClashDisplay-Bold.ttf') format('truetype');
font-weight: 700;
font-display: swap;
font-style: normal;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'ClashDisplay-Regular';
}

html, body {
    height: 100%;
    width: 100%;
}

a{
    text-decoration: none;
    color: black;
}
.flex{
    display: flex;
    align-items: center;
    justify-content: center;
}
h1{
    font-size: 5vw;
    font-family: 'ClashDisplay-Semibold';
}
h2{
    font-size: 3vw;
    font-family: 'ClashDisplay-Regular';
}
h3{
    font-size: 1.5vw;
    font-family: 'ClashDisplay-Regular';
}


.nav-container{
    height: 10vh;
    width: 100%;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    margin: 2vh 0vh;
    position: relative;
}

.nav-bar{
    justify-content: space-between;
    padding: 0vh 2vh;
    position: absolute;
    height: 100%;
    width: 100%;
}


.nav-bar #logo{
    position: relative;
    line-height: 1.1;
}

#trademark{
    position: absolute;
    top: 2px;
    left: 260px;
    font-size: 1.2vw;
    border: none;
}

#nav-options{
    transition: text-decoration 1s ease-in-out;
}

#nav-options:hover{
    text-decoration: underline;
}

.hero-container{
    height: 90vh;
    width: 100%;
    /* background-color: aqua; */
    padding: 20px;
    margin-top: 4vh;
}
.hero-container .hero-img{
    height: 88vh;
    width: 90vw;
    background: url(./assets/suits-production.jpg);
    background-size: cover;
    padding: 3.5vh;
    position: relative;
}

.hero-container .hero-img .over-text{
    position: absolute;
    width: 95%;
    bottom: 4vh;
    color: white;
}
.hero-container .hero-img .over-text .row-1{
    color: rgb(255, 255, 255);
}

.hero-container .hero-img .over-text .row-1 h1{
    margin-bottom: 2vh;
}

.hero-container .hero-img .over-text .row-1 h3{
    color: rgb(255, 255, 255);
}

.hero-container .hero-img .over-text .row-1 h3{
    margin-top: 3vh;
}

.images-container{
    height: 25vh;
    width: 100%;
    /* background-color: aqua; */
    margin-top: 7vh;
    justify-content: space-evenly;
    overflow: hidden;
}

.images-container .image-row{
    /* background-color: black; */
    height: 100%;
    justify-content: space-around;
    animation: movingAnimation 15s linear infinite;
}



.images-container .image-row .image{
    /* background-color: blue; */
    height: 100%;
    text-align: center;
    margin: 2vh 2vw;
}

.images-container .image-row .image img{
    height: 20vh;
    width: 11vw;
    border-radius: 50%;
}

@keyframes movingAnimation {
    from{
        transform: translate(0%);
    } 
    to {
        transform: translate(-100%);
    }
}

.blur-left{
    background: linear-gradient(90deg, #ffffff, transparent);
    z-index: 10;
    height: 25%;
    width: 15%;
    position: absolute;
    left: 0;
}
.blur-right{
    background: linear-gradient(90deg, transparent, #ffffff);
    z-index: 2;
    height: 25%;
    width: 15%;
    position: absolute;
    right: 0;
}


/* ---------------- duo-container--------------- */

.best-duo-container{
    /* height: 100vh; */
    width: 100%;
    /* background-color: rgb(197, 40, 40); */
    margin-top: 3vh;
    padding: 5vh 5vw;
}



.best-duo-container .duo-content{
    height: 100%;
    width: 100%;
    justify-content: space-between;
    margin-top: 5vh;
    /* background-color: blue; */
}

/* ================left============= */

.best-duo-container .duo-content .content-left{
    height: 100%;
    width: 48%;
    /* background-color: cadetblue; */
}

.best-duo-container .duo-content .content-left .image-left{
    height: 100%;
    /* background-color: aqua; */
    /* margin-top: 2vh; */
}

.best-duo-container .duo-content .content-left .image-left img{
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.best-duo-container .duo-content .content-left .name h3{
    margin-top: 1vh;
}



/* ===============right================= */

.best-duo-container .duo-content .content-right{
    height: 100%;
    width: 50%;
    /* background-color: cadetblue; */
    flex-direction: column;
    align-items: flex-start;
}

.best-duo-container .duo-content .content-right .image-right{
    height: 100%;
    /* background-color: aquamarine; */
    /* margin-top: 2vh; */
}

.best-duo-container .duo-content .content-right .image-right img{
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.best-duo-container .duo-content .content-right .quote {
    margin: 5vh;
    font-size: 2rem;
}

.best-duo-container .duo-content .content-right .quote h3{
    color: rgb(145, 145, 145);
}

.best-duo-container .duo-content .content-right .quote h4{
    margin-top: 2vh;
}


.win-duo{
    height: 100vh;
    /* background-color: bisque; */
    position: relative;
    top: 0;
    flex-direction: column;
    margin-top: 3vh;
}

.win-duo .duo-image{
    height: 85vh;
    width: 88%;
    background-color: aqua;
}

.win-duo .duo-image img{
    height: 100%;
    width: 100%;
}

.win-duo .duo-quote{
    margin-top: 1vh;
}



.characters-container{
    /* height: 100vh; */
    width: 100%;
    /* background-color: yellowgreen; */
    flex-direction: column;
    margin-top: 8vh;
}

.characters-head{
    margin-bottom: 4vh;
}

.characters{
    height: 20vh;
    width: 88%;
    /* background-color: wheat; */
    border-top: 1px solid black;
    /* margin-top: 2vh; */
}

.discription-characters{
    width: 50%;
    /* background-color: aqua; */
    justify-content: flex-start;
    gap: 8vw;
    font-size: 2rem;
    position: relative;
}
.discription-characters #num{
    position: absolute;
    top: 0;
}

.discription-characters .para{
    margin-left: 5vw;
}

.discription-characters .para p{
    font-size: 1rem;
    margin-top: 2vh;
    color: grey;
}

.character-image{
    height: 100%;
    width: 50%;
    /* background-color: bisque; */
}

.character-image img{
    height: 100%;
    width: 30%;
    border-radius: 100px;
    object-fit: cover;
    opacity: 0;
    transform: translateX(233%);
    transition: all .4s ease-in-out;
}

.characters:hover .character-image img{
    opacity: 1;
    border-radius: 0%;
    transform: translateX(-1%);
}



.moving-logo{
    height: 10vh;
    width: 100%;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    margin-top: 4vh;
    overflow: hidden;
}

.logo h2{
    margin-right: 5vw;
}

.logo{
    animation: moving-logo 10s linear infinite;
}

@keyframes moving-logo {
    from{
        transform: translate(0%);
    } 
    to {
        transform: translate(-100%);
    }
}


.closer{
    height: 9vh;
    width: 100%;
    margin: 2vh 0vw;
    font-size: 1.2rem;
}

